samples/_failures_safe/1761726471_bc4120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3dca9b37.c: In function ‘main’:
./samples/SAFE/__tmp_3dca9b37.c:167:5: error: expected declaration or statement at end of input
  167 |     for (size_t i = 0; i < tokens->count; i++) {
      |     ^~~
./samples/SAFE/__tmp_3dca9b37.c:167:5: error: expected declaration or statement at end of input
